kubernetes/apps/networking/wg-easy/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wg-easy-wstunnel
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 400"]
spec:
  hostnames:
    - "vpn.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: networking
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: wg-easy-wstunnel
      matches:
        - path:
            type: PathPrefix
            value: /
